--- a/dists/team.html
+++ b/dists/team.html
@@ -14,7 +14,7 @@
 <body>
     <div class="container-fluid">
         <div class="row">
-            <div class="col-12 jumbotron mb-3 team-heading bg-danger">
+            <div class="col-12 jumbotron mb-3 team-heading bg-dark">
                 <h1 class="text-center text-white">My Team</h1>
             </div>
         </div>
@@ -25,7 +25,7 @@
                 
 <div class="card manager-card">
     <div class="card-header bg-primary text-white">
-      <h2  class= <h2 class="card-title">Mason Joel</h2>
+      <h2  class="card-title">Mason Joel</h2>
       <h3 class="card-title"><i class="fas fa-mug-hot mr-2"></i>Manager</h3>
     </div>
     <div class="card-body">
